--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title:       Pixyll
 email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+author:      Fernanda Andrade
+description: "Fernanda's blog."
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "http://flandrade.github.io"
 date_format: "%b %-d, %Y"
 
 # Google services
