--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
+title:       Fernanda Andrade
+email:       flandradeg@gmail.com
 author:      Fernanda Andrade
-description: "Fernanda's blog."
+description: "Fernanda"
 baseurl:     ""
 url:         "http://flandrade.github.io"
 date_format: "%b %-d, %Y"
@@ -15,7 +15,7 @@ google_verification:
 animated:             false
 show_related_posts:   false
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
 
@@ -45,7 +45,7 @@ paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 # Change to 'true' to enable individual icons
 share_facebook: false
 share_twitter: false
