--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ google_verification:
 # Optional features
 animated:             false
 show_related_posts:   false
-show_post_footers:    false
+show_post_footers:    true
 show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
