--- a/_config.yml
+++ b/_config.yml
@@ -84,10 +84,10 @@ text:
     subject:  'New submission!'
     submit:   'Contact me'
     ajax:
-      sending:  'sending..'
+      sending:  'sending...'
       sent:     'Message sent!'
       error:    'Error!'
-  thanks: 'Thanks for contacting us. We will reply as soon as possible.'
+  thanks: 'Thanks for contacting me. I will reply as soon as possible.'
 
 
 # Build settings
