--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       flandradeg@gmail.com
 author:      Fernanda Andrade
 description: "Fernanda"
 baseurl:     ""
-url:         "http://flandrade.github.io"
+url:         "http://ferandrade.com/blog"
 date_format: "%b %-d, %Y"
 
 # Google services
